--- a/newsApp.html
+++ b/newsApp.html
@@ -53,7 +53,7 @@
     <div id="container"></div>
     <script>
         // window.addEventListener("load", loadNews);
-        window.onload = function(){
+        function onload(){
             var container = document.getElementById("container");
             var url = 'https://newsapi.org/v2/everything?' +
                 'q=india&' +
@@ -108,6 +108,8 @@
                 }
             })
         }
+
+        onload();
     </script>
 </body>
 </html>
